  * utmpset.c: check length of line argument to match struct utmp; properly
    handle line argument with max length (thx github/Skyb0rg007).
  * doc/index.html: add reference to repository on github.com.
  * doc/faq.html: typo.
  * doc/*.html: !DOCTYPE.
  * doc/index.html: add antiX Linux to the list of distributions (thx C.
    Jarry).
  * hasshsgr.h?, warn-shsgr: remove; obsolete.
  * runit.c: don't leak SIGCONT SIG_IGN into all child processes (thx Leah
    Neukirchen).
  * doc/index.html: fix link to Void Linux (thx R.G.).

2.2.0
Fri, 27 Sep 2024 00:38:25 +0000
  * chpst.dist, sv.dist, svlogd.dist, utmpset.dist: adapt.
  * chpst.c, man/chpst.8: add -C option to change working directory (thx
    Andrew J. Hesford, void linux).
  * doc/install.html: add link to sha256sum.
  * doc/install.html, doc/replaceinit.html: change mail address.
  * package/TODO: remove.
  * package/README,COPYING: Copyright date.
  * chpst.c: fix compilation warning(s): -Wunsequenced (thx Dmitry
    Bogatov, Z. Liu).
  * svlogd.c: Initialize all fields of sockaddr_in (thx Érico Rolim).
  * sv.c: add sleep_microseconds to encapsulate (u|nano)sleep (thx Z.
    Liu).
  * chpst.c, chpst.dist, man/chpst.8: add options -t and -V to chpst man
    page and usage (thx Lorenzo Puliti, Z. Liu).
  * man/runsv.8: log service's ./finish script is actually not invoked
    (thx Jamie Heilman, Dmitry Bogatov, Z. Liu).
  * man/runsv.8: clarify how signal override works with control/d and x
    (thx Andras Korn, Lorenzo Puliti, Z. Liu).
  * runit.c, runit.h, man/runit.8: support /etc/runit/nosync file to make
    sync on shutdown/reboot optional (thx Andras Korn).
  * prot.c, prot.h, chkshsgr.c, tryshsgr.c: remove; obsolete.
  * Makefile, TARGETS: no longer check for "shortsetgroups" (thx Leah
    Neukirchen).
  * chpst.c: replace prot_uid() with setuid().
  * utmpset.c: don't pass int32_t to time() (thx Lorenzo Beretta).
  * chpst.c, pathexec.h, pathexec_env.c, pathexec_run.c, runsvdir.c,