@@ -1,3 +1,5 @@
+  * runsv.c, sv.c: on exit, properly wait for log service to terminate.
+  * man/runsv.8, man/sv.8: adapt.
   * utmpset.c: check length of line argument to match struct utmp; properly
     handle line argument with max length (thx github/Skyb0rg007).
   * doc/index.html: add reference to repository on github.com.
